--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 regex = "1.10.6"
-reqwest = { version = "0.12.7", features = ["blocking"] }
+reqwest = { version = "0.12.7", features = ["blocking", "json"] }
 scraper = "0.20.0"
 serde = {version="1.0.210", features=["derive"]}
 serde_json = "1.0.128"
